# gpt-as-knowledge-worker

./: .gitignore  README.md  pyproject.toml
data/: questions_01.txt  questions_02.txt
results/questions-02/sessions-01/cpa-exam-020/: exam_data.json  session.html
results/questions-02/sessions-01/cpa-exam-180/: exam_data.json  session.html
src/: export_session_html.py  prompts.py  publication_figures_q01.ipynb  publication_figures_q02.ipynb  question_data.py  results_assessment_2.py  run_exam.py  run_exam_old_models.py  score_exam.py  session_template.html
