[tool.poetry]
name = "gpt-as-knowledge-worker"
version = "0.1.0"
description = "GPT as Knowledge Worker (GPT Takes the CPA Exam)"
authors = ["Michael Bommarito <michael.bommarito@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.25.0"
jinja2 = "^3.1.2"
pandas = "^1.5.2"
jupyter = "^1.0.0"
matplotlib = "^3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
